...
import dev.noelsrocha.panucci.ui.theme.caveatFont
import dev.noelsrocha.panucci.ui.uistate.HighlightsListUiState

@Composable
fun HighlightsListScreen(
    modifier: Modifier = Modifier,
    title: String = "Highlights of the Day",
    onOrderClick: () -> Unit = {},
    onProductClick: (Product
            ) -> Unit = {},
    uiState: HighlightsListUiState = HighlightsListUiState()
) {
    val products = uiState.products
...
            verticalArrangement = Arrangement.spacedBy(16.dp)
        ) {
            items(products) { p ->
                HighlightProductCard(
                    product = p,
                    Modifier
                        .semantics { contentDescription = "Highlight Product Card Item" }
                        .clickable {
                        onProductClick(p)
                    },
                    onOrderClick = onOrderClick
                )
            }
...
